--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Redirect Page</title>
     <!-- Meta Tag for Immediate Redirect -->
-    <meta http-equiv="refresh" content="0; url=https://youtu.be/xOVIXVH4wmM">
+    <meta http-equiv="refresh" content="0; url=https://rumble.com/v6rndj7-viral-fusion.html">
 </head>
 <body>
-    <p>If you are not redirected, <a href="https://youtu.be/xOVIXVH4wmM">click here</a>.</p>
+    <p>If you are not redirected, <a href="https://rumble.com/v6rndj7-viral-fusion.html">click here</a>.</p>
 </body>
 </html>
