--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Redirect Page</title>
     <!-- Meta Tag for Immediate Redirect -->
-    <meta http-equiv="refresh" content="0; url=https://">
+    <meta http-equiv="refresh" content="0; url=https://vimeo.com/1077619069/a97084420c?share=copy">
 </head>
 <body>
-    <p>If you are not redirected, <a href="https://">click here</a>.</p>
+    <p>If you are not redirected, <a href="https://vimeo.com/1077619069/a97084420c?share=copy">click here</a>.</p>
 </body>
 </html>
